<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|fill_vertical">


    <ImageView
        android:id="@+id/elementItemRepositoryImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/elementItemRepositoryImageUnlock"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/ui_label_user_repository"
        app:srcCompat="@drawable/repository" />

    <TextView
        android:id="@+id/elementItemRepositoryTextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/elementItemRepositoryImageUnlock"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/elementItemRepositoryImage"
        android:layout_toRightOf="@+id/elementItemRepositoryImage"
        android:text="@string/ui_label_user_repository"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/elementItemRepositoryImageLock"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/ui_label_lock"
        android:visibility="visible"
        app:srcCompat="@drawable/lock" />

    <ImageView
        android:id="@+id/elementItemRepositoryImageUnlock"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/ui_label_unlock"
        android:visibility="visible"
        app:srcCompat="@drawable/unlock" />

    <TextView
        android:id="@+id/elementItemRepositoryTextViewLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/elementItemRepositoryTextViewName"
        android:layout_alignStart="@+id/elementItemRepositoryTextViewName"
        android:layout_below="@+id/elementItemRepositoryTextViewName"
        android:layout_marginTop="8dp"
        android:text="@string/ui_label_language"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/elementItemRepositorytextViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/elementItemRepositoryTextViewLanguage"
        android:layout_alignStart="@+id/elementItemRepositoryTextViewLanguage"
        android:layout_below="@+id/elementItemRepositoryTextViewLanguage"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/ui_label_description" />
</RelativeLayout>
