<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:gravity="center_vertical|fill_vertical">

    <ImageView
        android:id="@+id/elementImageViewUser"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/ui_description_user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/github" />

    <TextView
        android:id="@+id/elementTextViewUserLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/elementImageViewUser"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@+id/elementImageViewUser"
        android:layout_toRightOf="@+id/elementImageViewUser"
        android:contentDescription="@string/ui_label_user_name"
        android:ellipsize="none"
        android:text="@string/ui_label_user_name"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/elementImageViewUser"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/elementTextViewUserURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/elementTextViewUserLogin"
        android:layout_alignStart="@+id/elementTextViewUserLogin"
        android:layout_below="@+id/elementTextViewUserLogin"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ui_label_user_url"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/elementImageViewUser"
        app:layout_constraintTop_toBottomOf="@+id/elementTextViewUserLogin" />

    <TextView
        android:id="@+id/elementTextViewUserRepo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/elementTextViewUserURL"
        android:layout_alignStart="@+id/elementTextViewUserURL"
        android:layout_below="@+id/elementTextViewUserURL"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ui_label_user_repository"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@+id/elementImageViewUser"
        app:layout_constraintTop_toBottomOf="@+id/elementTextViewUserURL" />

</RelativeLayout>